--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,20 +151,16 @@ section {
     margin-bottom: 15px;
 }
 
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -195,10 +191,10 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
-    border-bottom: 3px solid;
+    margin: 0 auto 35px auto;
+    padding-bottom: 20px;
+    text-align: center;
+    width: 50%;
   }
   
   .primary-border {
@@ -210,7 +206,6 @@ section {
   }
 
   .trainers {
-      text-align: center;
   }
 
   .trainer {
@@ -258,7 +253,6 @@ section {
 
 /* REACH OUT STYLES START */
 .contact {
-    text-align: center;
     background: #024e76;
   }
 
@@ -297,3 +291,7 @@ section {
   }
   
   /* REACH OUT STYLES END */
+
+  .flex-row {
+      display: flex;
+  }
