--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ header nav ul li {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 
@@ -91,6 +91,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-form {
@@ -131,7 +132,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -213,7 +214,7 @@ section {
 }
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     margin: 0 auto 35px auto;
     padding-bottom: 20px;
@@ -221,15 +222,15 @@ section {
     width: 50%;
   }
   
-  .primary-border {
+.primary-border {
     border-color: #fce138;
   }
   
-  .secondary-border {
+.secondary-border {
     border-color: #39a6b2;
   }
 
-  .trainers {
+.trainers {
       background: #024e76;
       width: 100%;
       margin: 0 auto;
@@ -238,17 +239,17 @@ section {
       justify-content: space-around;
   }
 
-  .trainer {
+.trainer {
       margin: 20px;
       color: #fce138;
       flex: 1;
   }
 
-  .trainer img {
+.trainer img {
       width: 100%;
   }
 
-  .trainer-bio {
+.trainer-bio {
       padding: 25px;
       line-height: 1.3;
   }
@@ -335,4 +336,19 @@ section {
 
   .flex-row {
       display: flex;
+  }
+
+  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+   
+  }
+  
+  /* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 768px) {
+    
+  }
+  
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+  @media screen and (max-width: 575px) {
+    
   }
